<?xml version="1.0" encoding="utf-8"?>	
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal"
	android:gravity="center_vertical"
	android:padding="5px"
	android:background="@drawable/pnr_row_background"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
  
	<TextView android:id="@+id/pnr_number"
		android:text=""
		android:textStyle="bold"
		android:layout_alignParentTop="true"
		android:layout_alignParentLeft="true"
		android:layout_marginTop="5dp"
		android:layout_marginLeft="5dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>
			
	<TextView android:id="@+id/pnr_status"
		android:text=""
		android:gravity="left"
		android:layout_below="@+id/pnr_number"
		android:layout_marginTop="5dp"
		android:layout_marginLeft="5dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>
			
	<TextView android:id="@+id/extra_info"
		android:text=""
		android:gravity="left"
		android:layout_below="@+id/pnr_status"
		android:layout_marginTop="5dp"
		android:layout_marginLeft="5dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>
 	
 	<Button android:id="@+id/check_status"
 		android:text="@string/check_pnr"
 		android:gravity="fill_vertical"
 		android:layout_toLeftOf="@+id/delete_status"
 		android:layout_marginTop="2dp"
 		android:layout_alignParentTop="true"
 		android:layout_width="65dp"
  		android:layout_height="wrap_content"/>
  	
  	<Button android:id="@+id/delete_status"
  		android:text="@string/delete_pnr"
  		android:padding="5px"
 		android:layout_toLeftOf="@+id/more_info"
 		android:layout_marginTop="2dp"
 		android:layout_alignParentTop="true"
 		android:layout_width="80dp"
  		android:layout_height="wrap_content"/>
  		
  	<Button android:id="@+id/more_info"
  		android:text="@string/info_pnr"
  		android:padding="5px"
  		android:hapticFeedbackEnabled="true"
  		android:layout_alignParentRight="true"
  		android:layout_alignParentTop="true"
  		android:layout_marginTop="2dp"
 		android:layout_marginRight="5dp"
 		android:layout_width="50dp"
  		android:layout_height="wrap_content"/>
	 	
</RelativeLayout>