<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:background="#212E36"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	
	<LinearLayout
		android:id="@+id/TicketInfoLayout"
		android:layout_marginLeft="2dp"
		android:layout_marginTop="0dp"
	    android:orientation="vertical"
	    android:gravity="center_vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
		
		<RelativeLayout
			android:id="@+id/TicketInfoHeader"
			android:layout_marginTop="0dp"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content">		
			
			<TextView 
				android:id="@+id/ticket_info_title"
				android:text="@string/ticket_info_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:textStyle="bold">
			</TextView>
			
			<TextView 
				android:id="@+id/ticket_pnrnumber"
				android:text="@string/empty_set"
				android:layout_below="@+id/ticket_info_title"
				android:layout_centerVertical="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:textStyle="bold">
			</TextView>
			
			
			<Button
				android:id="@+id/share_button"
				android:text=""
				android:hapticFeedbackEnabled="true"
				android:background="@drawable/share_button_drawable"
				android:layout_alignParentTop="true"
				android:layout_alignParentRight="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp">
			</Button>
			
		</RelativeLayout>
		
		<LinearLayout
			android:id="@+id/TicketInfoDetailLayout"
			android:layout_marginLeft="2dp"
			android:background="#112D42"
	    	android:orientation="vertical"
	    	android:gravity="center_vertical"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content">
			<TextView 
				android:id="@+id/ticket_info_line1"
				android:text="line1"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp">
			</TextView>
			
			<TextView 
				android:id="@+id/ticket_info_line2"
				android:text="line2"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp">
			</TextView>
			
			<TextView 
				android:id="@+id/ticket_info_line3"
				android:text="line3"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp">
			</TextView>
			
			<TextView 
				android:id="@+id/ticket_info_line4"
				android:text="line4"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp">
			</TextView>
			
		</LinearLayout>
		
	</LinearLayout>
	
	<LinearLayout
	    android:orientation="vertical"
	    android:background="#255D89"
	    android:paddingLeft="10dp"
	    android:paddingRight="10dp"
	    android:paddingBottom="2dp"
	    android:layout_below="@+id/TicketInfoLayout"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content">
		
		<TextView 
			android:id="@+id/passenger_info_title"
			android:text="@string/passenger_info_title"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="2dp"
			android:textStyle="bold">
		</TextView>
		
		<ListView  
         	android:id="@android:id/list"
         	android:listSelector="#255D89"
         	android:cacheColorHint="#255D89"
         	android:focusable="false"
         	android:focusableInTouchMode="false"
         	android:clickable="false"
         	android:layout_width="fill_parent" 
         	android:layout_height="wrap_content"/>
         	
         <TextView android:id="@android:id/empty"
     		android:gravity="center_vertical|center_horizontal"
     		android:layout_gravity="center_vertical|center_horizontal"
     		android:layout_margin="10px"
         	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
         	android:text="@string/empty_set"/>
         	
	</LinearLayout>
	 
</RelativeLayout>